--- a/static/src/scss/00_shared.scss
+++ b/static/src/scss/00_shared.scss
@@ -106,6 +106,7 @@ html {
         /*position: relative;
         max-width: 1440px;
         margin: 0 auto;*/
+        overflow: auto;
         height: 100vh;        
     }
 
